--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ examples/*/virtual-terminal
 examples/*/virtual-terminal-example
 examples/*/direct-debit
 examples/*/direct-debit-example
+examples/*/dedicated-virtual-account
+examples/*/dedicated-virtual-account-example
 
 # Generic pattern for any executable in examples directories
 examples/*/[!.]?*
