--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ examples/*/apple-pay
 examples/*/products
 examples/*/payment-pages
 examples/*/payment-requests
+examples/*/transfer-control
 
 # Example binaries - pattern-based names
 examples/*/*-example
@@ -77,6 +78,7 @@ examples/*/dedicated-virtual-account-example
 examples/*/apple-pay-example
 examples/*/products-example
 examples/*/payment-pages-example
+examples/*/transfer-control-example
 examples/*/miscellaneous-example
 examples/*/miscellaneous-advanced-example
 examples/*/settlements-example
